--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "opencv4nodejs": "^5.1.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "wrtc": "^0.4.5"
   }
 }
